Add records to DB

--- a/templates/base_modify.html
+++ b/templates/base_modify.html
@@ -46,7 +46,7 @@
 <!--            <button class="btn btn-outline-success" type="submit">Search</button>-->
 <!--          </form>-->
 <!--        </div>-->
-<!--      </div>-->
+      </div>
     </nav>
     {% block header_content %}{% endblock header_content %}
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
