--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,9 @@
           <a class="nav-link active" aria-current="page" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/view">View</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/loginPage">Login</a>
         </li>
         <li class="nav-item">
